State Practice part Two

--- a/index.html
+++ b/index.html
@@ -14,24 +14,34 @@
     const root = document.getElementById("root");
 
     function App() {
-        const [minutes, setMinutes] = React.useState(0);
+        const [amount, setAmount] = React.useState(0);
+        const [fliped, setFliped] = React.useState(false);
         const onChange = (event) => {
-            setMinutes(event.target.value);
+            setAmount(event.target.value);
         }
         const reset = () => {
-            setMinutes(0);
+            setAmount(0);
+        }
+        const onFlip = () => {
+            reset()
+            setFliped((current) => !current);
         }
         return (<div>
             <h1>Super Converter</h1>
             <div>
                 <label htmlFor="minutes">Minutes</label>
-                <input value={minutes} id="minutes" placeholder="Minutes" type="number" onChange={onChange}/>
+                <input value={fliped ? amount * 60 : amount} id="minutes" placeholder="Minutes" type="number"
+                       onChange={onChange}
+                       disabled={fliped === true}/>
             </div>
             <div>
                 <label htmlFor="hours">Hours</label>
-                <input value={Math.round(minutes / 60)} id="hours" placeholder="Hours" type="number" disabled/>
+                <input value={fliped ? amount : Math.round(amount / 60)} id="hours" placeholder="Hours" type="number"
+                       onChange={onChange}
+                       disabled={fliped === false}/>
             </div>
             <button onClick={reset}>Reset</button>
+            <button onClick={onFlip}>Flip</button>
         </div>)
     }
 
