--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <script type="text/babel">
     const root = document.getElementById("root");
 
-    function App() {
+    function MinutesToHours() {
         const [amount, setAmount] = React.useState(0);
-        const [fliped, setFliped] = React.useState(false);
+        const [inverted, setInverted] = React.useState(false);
         const onChange = (event) => {
             setAmount(event.target.value);
         }
@@ -24,24 +24,45 @@
         }
         const onFlip = () => {
             reset()
-            setFliped((current) => !current);
+            setInverted((current) => !current);
         }
         return (<div>
-            <h1>Super Converter</h1>
             <div>
                 <label htmlFor="minutes">Minutes</label>
-                <input value={fliped ? amount * 60 : amount} id="minutes" placeholder="Minutes" type="number"
+                <input value={inverted ? amount * 60 : amount} id="minutes" placeholder="Minutes" type="number"
                        onChange={onChange}
-                       disabled={fliped === true}/>
+                       disabled={inverted === true}/>
             </div>
             <div>
                 <label htmlFor="hours">Hours</label>
-                <input value={fliped ? amount : Math.round(amount / 60)} id="hours" placeholder="Hours" type="number"
+                <input value={inverted ? amount : Math.round(amount / 60)} id="hours" placeholder="Hours" type="number"
                        onChange={onChange}
-                       disabled={fliped === false}/>
+                       disabled={inverted === false}/>
             </div>
             <button onClick={reset}>Reset</button>
-            <button onClick={onFlip}>Flip</button>
+            <button onClick={onFlip}>{inverted ? "Turn back" : "Invert"}</button>
+        </div>)
+    }
+
+    function KmToMiles() {
+        return <h3>KM to M</h3>
+    }
+
+    function App() {
+        const [index, setIndex] = React.useState("xx");
+        const onSelect = (event) => {
+            setIndex(event.target.value);
+        }
+        return (<div><h1>Super Converter</h1>
+            <select onChange={onSelect}>
+                <option value="xx">select your units</option>
+                <option value="0">Minutes & Hours</option>
+                <option value="1">Km & Miles</option>
+            </select>
+            <hr/>
+            {index === "xx" ? "Please select your units " : null}
+            {index === "0" ? <MinutesToHours/> : null}
+            {index === "1" ? <KmToMiles/> : null}
         </div>)
     }
 
