--- a/index.html
+++ b/index.html
@@ -13,25 +13,30 @@
 <script type="text/babel">
     const root = document.getElementById("root");
 
-    function Btn({text, big}) {
+    function Btn({text, onClick}) {
         return <button
+            onClick={onClick}
             style={{
                 backgroundColor: "tomato",
                 color: "white",
                 padding: "10px 20px",
                 border: 0,
                 borderRadius: 10,
-                fontSize: big ? 18 : 16,
+                fontSize: 16,
             }}
         >
             {text}</button>
     }
 
+    const MemorizedBtn = React.memo(Btn);
+
     function App() {
+        const [value, setValue] = React.useState("Save Changes");
+        const changeValue = () => setValue("Revert Changes");
         return (<div>
-            <Btn text="Save Changes" big={true}></Btn>
-            <Btn text="Continue" big={false}></Btn>
-        </div>)
+            <MemorizedBtn text={value} onClick={changeValue}/>
+            <MemorizedBtn text="Continue"/>
+        </div>);
     }
 
     ReactDOM.render(<App/>, root);
